--- a/templates/index/list.html.twig
+++ b/templates/index/list.html.twig
@@ -8,9 +8,9 @@
         <div class="card-header">
             <h3 class="card-title">Название</h3>
             <div class="card-tools">
-                <a class="btn btn-success btn-sm" href="{{ path('calculate.item') }}" >Рассчитать элементы</a>
-                <a class="btn btn-success btn-sm" href="{{ path('parse.item.recursive') }}" >Обновить элементы рекурсивно</a>
-                <a class="btn btn-success btn-sm" href="{{ path('parse.list') }}" >Обновить</a>
+{#                <a class="btn btn-success btn-sm" href="{{ path('calculate.item') }}" >Рассчитать элементы</a>#}
+{#                <a class="btn btn-success btn-sm" href="{{ path('parse.item.recursive') }}" >Обновить элементы рекурсивно</a>#}
+{#                <a class="btn btn-success btn-sm" href="{{ path('parse.list') }}" >Обновить</a>#}
 
             </div>
         </div>
