--- a/templates/index/commands.html.twig
+++ b/templates/index/commands.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.html.twig' %}
 
-{% block title %}Название{% endblock %}
+{% block title %}Список комманд сервиса #{{ service.id }} {% endblock %}
 
 {% block page_content %}
 
