--- a/templates/index/dashboard.html.twig
+++ b/templates/index/dashboard.html.twig
@@ -5,17 +5,17 @@
 {% block page_content %}
 
     <div class="row">
-    {% for serviceConnection in serviceConnections %}
+    {% for service in services %}
 
         <div class="col-lg-3 col-6">
-            <a href="/"  class="small-box bg-{{ serviceConnection.status }}">
+            <a href="{{ path('commands', { serviceId:service.id }) }}"  class="small-box bg-{{ service.status }}">
 {#                <div class="small-box bg-info"> #}
 {#                <div class="small-box bg-success"> #}
 {#                <div class="small-box bg-warning"> #}
 {#                <div class="small-box bg-danger"> #}
                 <div class="inner">
-                    <h3>{{ serviceConnection.name }}</h3>
-                    <p>{{ serviceConnection.ip }}</p>
+                    <h3>{{ service.name }}</h3>
+                    <p>{{ service.ip }}</p>
                 </div>
                 <div class="icon">
                     <i class="ion ion-bag"></i>
