--- a/templates/index/dashboard.html.twig
+++ b/templates/index/dashboard.html.twig
@@ -8,7 +8,7 @@
     {% for service in services %}
 
         <div class="col-lg-3 col-6">
-            <a href="{{ path('commands', { serviceId:service.id }) }}"  class="small-box bg-{{ service.status }}">
+            <a href="{{ path('jobs', { serviceId:service.id }) }}"  class="small-box bg-{{ service.status }}">
                 <div class="inner">
                     <h3>{{ service.name }}</h3>
                     <p>{{ service.ip }}</p>
