ServiceCommandRepository.php ServiceJobRepository.php

--- a/templates/index/jobs.html.twig
+++ b/templates/index/jobs.html.twig
@@ -9,6 +9,7 @@
             <h3 class="card-title">Название</h3>
             <div class="card-tools">
                 <a class="btn btn-success btn-sm" href="{{ path('config', { serviceId:service.id }) }}" >Настройка сервиса</a>
+                <a class="btn btn-success btn-sm" href="#" onclick="return confirm('Удалить ?');" >Удалить</a>
             </div>
         </div>
         <div class="card-body">
