--- a/templates/index/dashboard.html.twig
+++ b/templates/index/dashboard.html.twig
@@ -3,7 +3,11 @@
 {% block title %}Список сервисов{% endblock %}
 
 {% block page_content %}
-
+    <div class="row">
+        <div class="col-12">
+            <a type="submit" class="btn btn-info btn-sm" href="#" >Создать новое подключение</a>
+        </div>
+    </div>
     <div class="row">
     {% for service in services %}
 
