--- a/templates/index/dashboard.html.twig
+++ b/templates/index/dashboard.html.twig
@@ -5,7 +5,7 @@
 {% block page_content %}
     <div class="row">
         <div class="col-12">
-            <a type="submit" class="btn btn-info btn-sm" href="#" >Создать новое подключение</a>
+            <a type="submit" class="btn btn-info btn-sm" href="{{ path('new.connection') }}" >Создать новое подключение</a>
         </div>
     </div>
     <div class="row">
