--- a/templates/index/dashboard.html.twig
+++ b/templates/index/dashboard.html.twig
@@ -3,29 +3,31 @@
 {% block title %}Список сервисов{% endblock %}
 
 {% block page_content %}
+
     <div class="row">
-        <div class="col-12">
+        <div class="col-lg-12 ">
             <a type="submit" class="btn btn-info btn-sm" href="{{ path('new.connection') }}" >Создать новое подключение</a>
         </div>
     </div>
-    <div class="row">
-    {% for service in services %}
 
-        <div class="col-lg-3 col-6">
-            <a href="{{ path('jobs', { serviceId:service.id }) }}"  class="small-box bg-{{ service.status }}">
-                <div class="inner">
-                    <h3>{{ service.name }}</h3>
-                    <p>{{ service.ip }}</p>
-                </div>
-                <div class="icon">
-                    <i class="ion ion-bag"></i>
-                </div>
-                <span class="small-box-footer">
-                    More info
-                    <i class="fas fa-arrow-circle-right"></i>
-                </span>
-            </a>
-        </div>
-    {% endfor %}
+    <div class="row">
+        {% for service in services %}
+
+            <div class="col-lg-3 col-6">
+                <a href="{{ path('jobs', { serviceId:service.id }) }}"  class="small-box bg-{{ service.status }}">
+                    <div class="inner">
+                        <h3>{{ service.name }}</h3>
+                        <p>{{ service.ip }}</p>
+                    </div>
+                    <div class="icon">
+                        <i class="ion ion-bag"></i>
+                    </div>
+                    <span class="small-box-footer">
+                        More info
+                        <i class="fas fa-arrow-circle-right"></i>
+                    </span>
+                </a>
+            </div>
+        {% endfor %}
     </div>
 {% endblock %}
