--- a/templates/service_command/edit.html.twig
+++ b/templates/service_command/edit.html.twig
@@ -1,13 +1,22 @@
-<!DOCTYPE html>
+{% extends 'layout.html.twig' %}
 
-<title>Edit ServiceCommand</title>
+{% block title %}Edit ServiceCommand #{{ service_command.id }} {% endblock %}
 
-{% block body %}
-    <h1>Edit ServiceCommand</h1>
+{% block page_content %}
+<div class="row">
+    <div class="col-md-4">
 
-    {{ include('service_command/_form.html.twig', {'button_label': 'Update'}) }}
+        <div class="card card-info">
+            <div class="card-header">
+                <h3 class="card-title">Подробная информация</h3>
+            </div>
+            <div class="card-body">
 
-    <a href="{{ path('service-command.index') }}">back to list</a>
+                {{ include('service_command/_form.html.twig', {'button_label': 'Update'}) }}
 
-    {{ include('service_command/_delete_form.html.twig') }}
+                {{ include('service_command/_delete_form.html.twig') }}
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
