--- a/templates/service_command/index.html.twig
+++ b/templates/service_command/index.html.twig
@@ -1,39 +1,60 @@
-<!DOCTYPE html>
+{% extends 'layout.html.twig' %}
 
-<title>ServiceCommand index</title>
+{% block title %}List ServiceCommand{% endblock %}
 
-{% block body %}
-    <h1>ServiceCommand index</h1>
+{% block page_content %}
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Type</th>
-                <th>Id</th>
-                <th>Data</th>
-                <th>IsActive</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for service_command in service_commands %}
-            <tr>
-                <td>{{ service_command.type }}</td>
-                <td>{{ service_command.id }}</td>
-                <td>{{ service_command.data ? service_command.data|json_encode : '' }}</td>
-                <td>{{ service_command.isActive ? 'Yes' : 'No' }}</td>
-                <td>
-                    <a href="{{ path('service-command.show', {'id': service_command.id}) }}">show</a>
-                    <a href="{{ path('service-command.edit', {'id': service_command.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <div class="card">
+        <div class="card-header">
+            <h3 class="card-title">Название</h3>
+            <div class="card-tools">
+                <a class="btn btn-success btn-sm" href="{{ path('service-command.new') }}" >Create new</a>
+            </div>
+        </div>
+        <div class="card-body">
+            <div class="tab-content" id="custom-content-below-tabContent">
+                <div class="tab-pane fade show active" id="tab-1" role="tabpanel" aria-labelledby="">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>Type</th>
+                            <th>Id</th>
+                            <th>Data</th>
+                            <th>IsActive</th>
+                            <th width="80">actions</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for service_command in service_commands %}
+                            <tr>
+                                <td>{{ service_command.type }}</td>
+                                <td>{{ service_command.id }}</td>
+                                <td>{{ service_command.data ? service_command.data|json_encode : '' }}</td>
+                                <td>{{ service_command.isActive ? 'Yes' : 'No' }}</td>
+                                <td>
+                                    <div class="btn-group">
+                                        <a href="{{ path('service-command.show', {'id': service_command.id}) }}"
+                                           class="btn btn-info btn-sm">show</a>
+                                        <a href="{{ path('service-command.edit', {'id': service_command.id}) }}"
+                                           class="btn btn-info btn-sm">edit</a>
 
-    <a href="{{ path('service-command.new') }}">Create new</a>
+                                    </div>
+
+                                </td>
+                            </tr>
+                        {% else %}
+                            <tr>
+                                <td colspan="5">no records found</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                <div class="tab-pane fade" id="tab-2" role="tabpanel" aria-labelledby=""></div>
+                <div class="tab-pane fade" id="tab-3" role="tabpanel" aria-labelledby=""></div>
+            </div>
+
+        </div>
+
+    </div>
 {% endblock %}
