--- a/templates/service_command/show.html.twig
+++ b/templates/service_command/show.html.twig
@@ -1,34 +1,46 @@
-<!DOCTYPE html>
+{% extends 'layout.html.twig' %}
 
-<title>ServiceCommand</title>
+{% block title %}ServiceCommand #{{ service_command.id }} {% endblock %}
 
-{% block body %}
-    <h1>ServiceCommand</h1>
+{% block page_content %}
+<div class="row">
+    <div class="col-md-4">
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Type</th>
-                <td>{{ service_command.type }}</td>
-            </tr>
-            <tr>
-                <th>Id</th>
-                <td>{{ service_command.id }}</td>
-            </tr>
-            <tr>
-                <th>Data</th>
-                <td>{{ service_command.data ? service_command.data|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>IsActive</th>
-                <td>{{ service_command.isActive ? 'Yes' : 'No' }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('service-command.index') }}">back to list</a>
-
-    <a href="{{ path('service-command.edit', {'id': service_command.id}) }}">edit</a>
-
-    {{ include('service_command/_delete_form.html.twig') }}
+        <div class="card card-info">
+            <div class="card-header">
+                <h3 class="card-title">Подробная информация</h3>
+            </div>
+            <!-- /.card-header -->
+            <!-- form start -->
+            <form class="form-horizontal">
+                <div class="card-body">
+                    <div class="form-group row">
+                        <label for="field-1" class="col-sm-4 col-form-label">Type</label>
+                        <div class="col-sm-8">
+                            {{ service_command.type }}
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="field-1" class="col-sm-4 col-form-label">Id</label>
+                        <div class="col-sm-8">
+                            {{ service_command.id }}
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="field-1" class="col-sm-4 col-form-label">Data</label>
+                        <div class="col-sm-8">
+                            {{ service_command.data ? service_command.data|json_encode : '' }}
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="field-1" class="col-sm-4 col-form-label">IsActive</label>
+                        <div class="col-sm-8">
+                            {{ service_command.isActive ? 'Yes' : 'No' }}
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
