service_command/index.html.twig

--- a/templates/service_command/edit.html.twig
+++ b/templates/service_command/edit.html.twig
@@ -8,7 +8,7 @@
 
         <div class="card card-info">
             <div class="card-header">
-                <h3 class="card-title">Подробная информация</h3>
+                <h3 class="card-title">Edit ServiceCommand #{{ service_command.id }}</h3>
             </div>
             <div class="card-body">
 
