--- a/templates/service_command/index.html.twig
+++ b/templates/service_command/index.html.twig
@@ -6,7 +6,7 @@
 
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title">Название</h3>
+            <h3 class="card-title">List ServiceCommand</h3>
             <div class="card-tools">
                 <a class="btn btn-success btn-sm" href="{{ path('service-command.new') }}" >Create new</a>
             </div>
@@ -17,26 +17,29 @@
                     <table class="table table-striped">
                         <thead>
                         <tr>
-                            <th>Type</th>
-                            <th>Id</th>
+                            <th width="20">Id</th>
+                            <th width="100">Type</th>
+                            <th width="40">IsActive</th>
                             <th>Data</th>
-                            <th>IsActive</th>
                             <th width="80">actions</th>
                         </tr>
                         </thead>
                         <tbody>
                         {% for service_command in service_commands %}
                             <tr>
-                                <td>{{ service_command.type }}</td>
                                 <td>{{ service_command.id }}</td>
-                                <td>{{ service_command.data ? service_command.data|json_encode : '' }}</td>
+                                <td>{{ service_command.type }}</td>
                                 <td>{{ service_command.isActive ? 'Yes' : 'No' }}</td>
+                                <td>{{ service_command.data ? service_command.data|json_encode : '' }}</td>
+
                                 <td>
                                     <div class="btn-group">
                                         <a href="{{ path('service-command.show', {'id': service_command.id}) }}"
                                            class="btn btn-info btn-sm">show</a>
                                         <a href="{{ path('service-command.edit', {'id': service_command.id}) }}"
                                            class="btn btn-info btn-sm">edit</a>
+                                        <a href="{{ path('service-command.delete', {'id': service_command.id}) }}"
+                                           class="btn btn-info btn-sm">delete</a>
 
                                     </div>
 
