--- a/templates/service_command/new.html.twig
+++ b/templates/service_command/new.html.twig
@@ -8,7 +8,7 @@
 
             <div class="card card-info">
                 <div class="card-header">
-                    <h3 class="card-title">Подробная информация</h3>
+                    <h3 class="card-title">Create new ServiceCommand</h3>
                 </div>
                 <div class="card-body">
                     {{ include('service_command/_form.html.twig') }}
