--- a/templates/main/sidebar.html.twig
+++ b/templates/main/sidebar.html.twig
@@ -13,6 +13,14 @@
                     </p>
                 </a>
             </li>
+            <li class="nav-item">
+                <a href="{{ path('service-command.index') }}" class="nav-link">
+                    <i class="nav-icon fas fa-th"></i>
+                    <p>
+                       Список Команд
+                    </p>
+                </a>
+            </li>
         </ul>
     </nav>
     <!-- /.sidebar-menu -->
