--- a/templates/service_connection/_delete_form.html.twig
+++ b/templates/service_connection/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('service-connection.delete', {'id': service_connection.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ service_connection.id) }}">
-    <button class="btn ">Delete</button>
+    <button class="btn btn-default">Delete</button>
 </form>
