--- a/templates/service_connection/new.html.twig
+++ b/templates/service_connection/new.html.twig
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
+{% extends 'layout.html.twig' %}
 
-<title>New ServiceConnection</title>
+{% block title %}Create new ServiceConnection {% endblock %}
 
-{% block body %}
-    <h1>Create new ServiceConnection</h1>
+{% block page_content %}
+    <div class="row">
+        <div class="col-md-4">
 
-    {{ include('service_connection/_form.html.twig') }}
+            <div class="card card-info">
+                <div class="card-header">
+                    <h3 class="card-title">Create new ServiceConnection</h3>
+                </div>
+                <div class="card-body">
 
-    <a href="{{ path('service-connection.index') }}">back to list</a>
+                    {{ include('service_connection/_form.html.twig') }}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
