--- a/templates/service_command/show.html.twig
+++ b/templates/service_command/show.html.twig
@@ -40,6 +40,11 @@
                     </div>
                 </div>
             </form>
+            <div class="card-footer">
+                <div class="btn-group-vertical btn-block">
+                    {{ include('service_command/_delete_form.html.twig') }}
+                </div>
+            </div>
         </div>
     </div>
 </div>
