--- a/templates/service_connection/show.html.twig
+++ b/templates/service_connection/show.html.twig
@@ -46,6 +46,11 @@
                         </div>
                     </div>
                 </form>
+                <div class="card-footer">
+                    <div class="btn-group-vertical btn-block">
+                        {{ include('service_connection/_delete_form.html.twig') }}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
