sidebar.html.twig

--- a/templates/main/sidebar.html.twig
+++ b/templates/main/sidebar.html.twig
@@ -17,7 +17,15 @@
                 <a href="{{ path('service-command.index') }}" class="nav-link">
                     <i class="nav-icon fas fa-th"></i>
                     <p>
-                       Список Команд
+                       Список команд
+                    </p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="{{ path('service-connection.index') }}" class="nav-link">
+                    <i class="nav-icon fas fa-th"></i>
+                    <p>
+                       Список подключений
                     </p>
                 </a>
             </li>
