templates/service_job

--- a/templates/service_job/index.html.twig
+++ b/templates/service_job/index.html.twig
@@ -1,41 +1,59 @@
-<!DOCTYPE html>
+{% extends 'layout.html.twig' %}
 
-<title>ServiceJob index</title>
+{% block title %}List ServiceJob{% endblock %}
 
-{% block body %}
-    <h1>ServiceJob index</h1>
+{% block page_content %}
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Result</th>
-                <th>Id</th>
-                <th>Data</th>
-                <th>IsActive</th>
-                <th>Status</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for service_job in service_jobs %}
-            <tr>
-                <td>{{ service_job.result }}</td>
-                <td>{{ service_job.id }}</td>
-                <td>{{ service_job.data ? service_job.data|json_encode : '' }}</td>
-                <td>{{ service_job.isActive ? 'Yes' : 'No' }}</td>
-                <td>{{ service_job.status }}</td>
-                <td>
-                    <a href="{{ path('service-job.show', {'id': service_job.id}) }}">show</a>
-                    <a href="{{ path('service-job.edit', {'id': service_job.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <div class="card">
+        <div class="card-header">
+            <h3 class="card-title">List ServiceJob</h3>
+            <div class="card-tools">
+                <a class="btn btn-success btn-sm" href="{{ path('service-connection.new') }}">Create new</a>
+            </div>
+        </div>
+        <div class="card-body">
+            <div class="tab-content" id="custom-content-below-tabContent">
+                <div class="tab-pane fade show active" id="tab-1" role="tabpanel" aria-labelledby="">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>Result</th>
+                            <th>Id</th>
+                            <th>Data</th>
+                            <th>IsActive</th>
+                            <th>Status</th>
+                            <th>actions</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for service_job in service_jobs %}
+                            <tr>
+                                <td>{{ service_job.result }}</td>
+                                <td>{{ service_job.id }}</td>
+                                <td>{{ service_job.data ? service_job.data|json_encode : '' }}</td>
+                                <td>{{ service_job.isActive ? 'Yes' : 'No' }}</td>
+                                <td>{{ service_job.status }}</td>
+                                <td>
+                                    <div class="btn-group">
+                                        <a href="{{ path('service-job.show', {'id': service_job.id}) }}"
+                                           class="btn btn-info btn-sm">show</a>
+                                        <a href="{{ path('service-job.edit', {'id': service_job.id}) }}"
+                                           class="btn btn-info btn-sm">edit</a>
+                                    </div>
+                                </td>
+                            </tr>
+                        {% else %}
+                            <tr>
+                                <td colspan="6">no records found</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
 
-    <a href="{{ path('service-job.new') }}">Create new</a>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
 {% endblock %}
