--- a/templates/service_job/edit.html.twig
+++ b/templates/service_job/edit.html.twig
@@ -1,13 +1,20 @@
-<!DOCTYPE html>
+{% extends 'layout.html.twig' %}
 
-<title>Edit ServiceJob</title>
+{% block title %}Edit ServiceJob #{{ service_job.id }} {% endblock %}
 
-{% block body %}
-    <h1>Edit ServiceJob</h1>
+{% block page_content %}
+    <div class="row">
+        <div class="col-md-4">
 
-    {{ include('service_job/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('service-job.index') }}">back to list</a>
-
-    {{ include('service_job/_delete_form.html.twig') }}
+            <div class="card card-info">
+                <div class="card-header">
+                    <h3 class="card-title">Edit ServiceJob #{{ service_job.id }}</h3>
+                </div>
+                <div class="card-body">
+                    {{ include('service_job/_form.html.twig', {'button_label': 'Update'}) }}
+                    {{ include('service_job/_delete_form.html.twig') }}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
