--- a/templates/service_job/show.html.twig
+++ b/templates/service_job/show.html.twig
@@ -1,38 +1,58 @@
-<!DOCTYPE html>
+{% extends 'layout.html.twig' %}
 
-<title>ServiceJob</title>
+{% block title %}ServiceJob #{{ service_job.id }} {% endblock %}
 
-{% block body %}
-    <h1>ServiceJob</h1>
+{% block page_content %}
+    <div class="row">
+        <div class="col-md-4">
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Result</th>
-                <td>{{ service_job.result }}</td>
-            </tr>
-            <tr>
-                <th>Id</th>
-                <td>{{ service_job.id }}</td>
-            </tr>
-            <tr>
-                <th>Data</th>
-                <td>{{ service_job.data ? service_job.data|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>IsActive</th>
-                <td>{{ service_job.isActive ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>Status</th>
-                <td>{{ service_job.status }}</td>
-            </tr>
-        </tbody>
-    </table>
+            <div class="card card-info">
+                <div class="card-header">
+                    <h3 class="card-title">ServiceJob #{{ service_job.id }} </h3>
+                </div>
+                <!-- /.card-header -->
+                <!-- form start -->
+                <form class="form-horizontal">
+                    <div class="card-body">
+                        <div class="form-group row">
+                            <label for="field-1" class="col-sm-4 col-form-label">Result</label>
+                            <div class="col-sm-8">
+                                {{ service_job.result }}
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="field-1" class="col-sm-4 col-form-label">Id</label>
+                            <div class="col-sm-8">
+                                {{ service_job.id }}
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="field-1" class="col-sm-4 col-form-label">Data</label>
+                            <div class="col-sm-8">
+                                {{ service_job.data ? service_job.data|json_encode : '' }}
+                            </div>
+                        </div>
 
-    <a href="{{ path('service-job.index') }}">back to list</a>
-
-    <a href="{{ path('service-job.edit', {'id': service_job.id}) }}">edit</a>
-
-    {{ include('service_job/_delete_form.html.twig') }}
+                        <div class="form-group row">
+                            <label for="field-1" class="col-sm-4 col-form-label">IsActive</label>
+                            <div class="col-sm-8">
+                                {{ service_job.isActive ? 'Yes' : 'No' }}
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="field-1" class="col-sm-4 col-form-label">Status</label>
+                            <div class="col-sm-8">
+                                {{ service_job.status }}
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <div class="card-footer">
+                    <div class="btn-group-vertical btn-block">
+                        {{ include('service_job/_delete_form.html.twig') }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
