templates/service_job

--- a/templates/main/sidebar.html.twig
+++ b/templates/main/sidebar.html.twig
@@ -29,6 +29,14 @@
                     </p>
                 </a>
             </li>
+            <li class="nav-item">
+                <a href="{{ path('service-job.index') }}" class="nav-link">
+                    <i class="nav-icon fas fa-th"></i>
+                    <p>
+                       Список задач
+                    </p>
+                </a>
+            </li>
         </ul>
     </nav>
     <!-- /.sidebar-menu -->
