--- a/templates/service_job/index.html.twig
+++ b/templates/service_job/index.html.twig
@@ -8,7 +8,7 @@
         <div class="card-header">
             <h3 class="card-title">List ServiceJob</h3>
             <div class="card-tools">
-                <a class="btn btn-success btn-sm" href="{{ path('service-connection.new') }}">Create new</a>
+                <a class="btn btn-success btn-sm" href="{{ path('service-job.new') }}">Create new</a>
             </div>
         </div>
         <div class="card-body">
