--- a/templates/index/commands.html.twig
+++ b/templates/index/commands.html.twig
@@ -8,7 +8,7 @@
         <div class="card-header">
             <h3 class="card-title">Название</h3>
             <div class="card-tools">
-                <a class="btn btn-success btn-sm" href="{{ path('config', { serviceId:service.id }) }}" >Настройка сервиса</a>
+                <a class="btn btn-success btn-sm" href="{{ path('service-connection.edit', { serviceId:service.id }) }}" >Настройка сервиса</a>
             </div>
         </div>
         <div class="card-body">
