ServiceJob.php ServiceCommand.php

--- a/templates/index/jobs.html.twig
+++ b/templates/index/jobs.html.twig
@@ -61,7 +61,7 @@
         <div class="card-header">
             <h3 class="card-title">List ServiceCommand</h3>
             <div class="card-tools">
-                <a class="btn btn-success btn-sm" href="{{ path('service-command.new') }}" >Create new</a>
+{#                <a class="btn btn-success btn-sm" href="{{ path('service-command.new') }}" >Create new</a>#}
             </div>
         </div>
         <div class="card-body">
