--- a/templates/index/jobs.html.twig
+++ b/templates/index/jobs.html.twig
@@ -35,7 +35,7 @@
                                     </a>
                                 </td>
                                 <td>{{ job.command.type }}</td>
-                                <td>{{ job.isActive }}</td>
+                                <td>{{ job.isActive ? 'Yes' : 'No' }}</td>
                                 <td>{{ job.status }}</td>
                                 <td>{{ job.data | json_encode }}</td>
                                 <td>
@@ -57,6 +57,7 @@
             </div>
         </div>
     </div>
+    {% if commands.count %}
     <div class="card">
         <div class="card-header">
             <h3 class="card-title">List ServiceCommand</h3>
@@ -71,9 +72,7 @@
                         <thead>
                         <tr>
                             <th width="20">Id</th>
-                            <th width="100">Type</th>
-                            <th width="40">IsActive</th>
-                            <th>Data</th>
+                            <th width="">Type</th>
                             <th width="80">actions</th>
                         </tr>
                         </thead>
@@ -82,9 +81,6 @@
                             <tr>
                                 <td>{{ service_command.id }}</td>
                                 <td>{{ service_command.type }}</td>
-                                <td>{{ service_command.isActive ? 'Yes' : 'No' }}</td>
-                                <td>{{ service_command.data ? service_command.data|json_encode : '' }}</td>
-
                                 <td>
                                     <div class="btn-group">
                                         <a href="{{ path('service-job.connect', {
@@ -111,4 +107,6 @@
         </div>
 
     </div>
+
+    {% endif %}
 {% endblock %}
