--- a/templates/service_job/show.html.twig
+++ b/templates/service_job/show.html.twig
@@ -53,5 +53,87 @@
                 </div>
             </div>
         </div>
+        {% set service_command = service_job.command %}
+        <div class="col-md-4">
+            <div class="card card-info">
+                <div class="card-header">
+                    <h3 class="card-title">Подробная информация - service_command</h3>
+                </div>
+                <!-- /.card-header -->
+                <!-- form start -->
+                <form class="form-horizontal">
+                    <div class="card-body">
+                        <div class="form-group row">
+                            <label for="field-1" class="col-sm-4 col-form-label">Type</label>
+                            <div class="col-sm-8">
+                                {{ service_command.type }}
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="field-1" class="col-sm-4 col-form-label">Id</label>
+                            <div class="col-sm-8">
+                                {{ service_command.id }}
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="field-1" class="col-sm-4 col-form-label">Data</label>
+                            <div class="col-sm-8">
+                                {{ service_command.data ? service_command.data|json_encode : '' }}
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="field-1" class="col-sm-4 col-form-label">IsActive</label>
+                            <div class="col-sm-8">
+                                {{ service_command.isActive ? 'Yes' : 'No' }}
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        {% set service_connection = service_job.connection %}
+        <div class="col-md-4">
+            <div class="card card-info">
+                <div class="card-header">
+                    <h3 class="card-title">Подробная информация - service_connection</h3>
+                </div>
+                <!-- /.card-header -->
+                <!-- form start -->
+                <form class="form-horizontal">
+                    <div class="card-body">
+                        <div class="form-group row">
+                            <label for="field-1" class="col-sm-4 col-form-label">Name</label>
+                            <div class="col-sm-8">
+                                {{ service_connection.name }}
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="field-1" class="col-sm-4 col-form-label">Ip</label>
+                            <div class="col-sm-8">
+                                {{ service_connection.ip }}
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="field-1" class="col-sm-4 col-form-label">Data</label>
+                            <div class="col-sm-8">
+                                {{ service_connection.data ? service_connection.data|json_encode : '' }}
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="field-1" class="col-sm-4 col-form-label">IsActive</label>
+                            <div class="col-sm-8">
+                                {{ service_connection.isActive ? 'Yes' : 'No' }}
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="field-1" class="col-sm-4 col-form-label">Status</label>
+                            <div class="col-sm-8">
+                                {{ service_connection.status }}
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 {% endblock %}
