--- a/templates/service_job/show.html.twig
+++ b/templates/service_job/show.html.twig
@@ -38,12 +38,12 @@
                                 {{ service_job.data ? service_job.data|json_encode : '' }}
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <label for="field-1" class="col-sm-4 col-form-label">Result</label>
-                            <div class="col-sm-8">
-                                {{ service_job.result }}
-                            </div>
-                        </div>
+{#                        <div class="form-group row">#}
+{#                            <label for="field-1" class="col-sm-4 col-form-label">Result</label>#}
+{#                            <div class="col-sm-8">#}
+{#                                {{ service_job.result }}#}
+{#                            </div>#}
+{#                        </div>#}
                     </div>
                 </form>
                 <div class="card-footer">
