--- a/templates/service_command/jobs.report.html.twig
+++ b/templates/service_command/jobs.report.html.twig
@@ -9,7 +9,7 @@
             <div class="col-md-6">
                 <div class="card card-info">
                     <div class="card-header">
-                        <h3 class="card-title">#{{ job.id }} {{ job.connection.name }}</h3>
+                        <h3 class="card-title">#{{ job.id }} {{ job.connection.name }} - {{ job.connection.ip }}</h3>
                     </div>
                     <div class="card-body">
                         <pre>{{ job.result }}</pre>
