--- a/templates/service_command/show.html.twig
+++ b/templates/service_command/show.html.twig
@@ -43,7 +43,10 @@
             <div class="card-footer">
                 <div class="btn-group-vertical btn-block">
                     {{ include('service_command/_delete_form.html.twig') }}
+                    <a href="{{ path('service-command.job.reports', {'type': service_command.type}) }}"
+                       class="btn btn-info btn-sm">report</a>
                 </div>
+
             </div>
         </div>
     </div>
